messaging_app/messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging_app-services
  labels:
    app: messaging_app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: messaging_app
  template:
    metadata:
      labels:
        app: messaging_app
    spec:
      containers:
      - name: django-app
        image: awinimaxwell/messaging_app:latest
        ports:
        - containerPort: 8000
        command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
