messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-green
  labels:
    app: messaging_app
    version: "2.0"
    deployment: green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: messaging_app
      version: "2.0"
  template:
    metadata:
      labels:
        app: messaging_app
        version: "2.0"
        deployment: green
    spec:
      containers:
      - name: meessaging_app
        image: awinimaxwelle/django-app:v2.0
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /health/
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health/
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: django-app-green-service
  labels:
    app: meesaging_app
    deployment: green
spec:
  selector:
    app: django-app
    deployment: green
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
